# software-rasterization-toolkit

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  bitmap.c  bitmap.h  bitmap_test.c  camera.c  camera.h  common.h  csg.c  csg.h  example_csg.c  example_hue_scale.c  example_polygon.c  example_polygon_depth.c  example_polygon_rotation.c  example_polygon_shading.c  example_render_shading.c  example_render_world.c  example_triangle.c  example_zbuffer.c  helper_formula_converter.py  linkedlist.c  linkedlist.h  matrix.c  matrix.h  matrix_test.c  polygon.c  polygon.h  rasterizer.c  rasterizer.h  transformer.c  transformer.h  vector.c  vector.h  vector_test.c  world.c  (+1 more)
examples/: world.webm
models/: ball.stl  box.stl  cone.stl  cube.stl  monkey.stl  plane.stl
